Added command at the start of notebook to install pyrtlib and pint-xarray

--- a/06.Layer_Absorption_and_Transmission/Cloud_Absorption_Model.ipynb
+++ b/06.Layer_Absorption_and_Transmission/Cloud_Absorption_Model.ipynb
@@ -46,6 +46,8 @@
     }
    ],
    "source": [
+    "!conda install -c conda-forge -y pint-xarray\n",
+    "!pip install pyrtlib\n",
     "import pint_xarray\n",
     "import pint\n",
     "ureg = pint.UnitRegistry()\n",
@@ -56,7 +58,6 @@
     "import proplot as pplt\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "!pip install pyrtlib\n",
     "import pyrtlib\n",
     "\n",
     "#pplt.use_style('seaborn-talk')\n",
