Worked on RTE solver for class

--- a/10.Radiative_Fluxes_and_Heating/heating_rates.ipynb
+++ b/10.Radiative_Fluxes_and_Heating/heating_rates.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,16 @@
     "\n",
     "# Set path to line catalogue\n",
     "import os\n",
-    "# Uncomment and adjust the following lines\n",
-    "# if ARTS_DATA_PATH is not set as environment variable\n",
-    "# os.environ[\"ARTS_DATA_PATH\"] = \"your_path_to/arts-xml-data/:your_path_to/arts-cat-data/:\"\n",
-    "os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
+    "if os.path.isdir('/share/share/ESCI345'):\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/share/share/ESCI345/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/ESCI345/atmospheres/\"\n",
+    "else:\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
+    "    \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import typhon as ty\n",
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -387,37 +392,43 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate the heating rate for each band and plot them together with the other heating rate\n",
+    "net_flux = (spectral_flux_upward - spectral_flux_downward)\n",
+    "flux_band = integrate_spectral_irradiance(wnum.magnitude, net_flux)\n",
+    "heating, z = calc_heatingrates(z, p, T, flux_band)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(46,) (46, 300)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "array([[9021, 1736,  182, ...,  962, 4524, 6790],\n",
-       "       [   0, 1848,  260, ...,   13, 2964, 1750],\n",
-       "       [8463,  392,  390, ...,  403, 1144,  910],\n",
-       "       ...,\n",
-       "       [1581,  308,    0, ...,  351,  156, 4970],\n",
-       "       [5766, 1736,  832, ...,  585, 1352, 4970],\n",
-       "       [2511, 2352, 2158, ..., 1040, 4576, 3990]])"
+       "array([ 3.07793894e-07,  3.24587014e-07,  2.78934477e-07,  2.11364416e-07,\n",
+       "        1.92603381e-07,  2.03799921e-07,  2.17929607e-07,  2.08628762e-07,\n",
+       "        1.95792818e-07,  1.95329806e-07,  2.12742396e-07,  2.42912598e-07,\n",
+       "        2.34244903e-07,  1.34567986e-07,  2.58807665e-08, -2.47190661e-09,\n",
+       "        7.90649294e-09,  1.29606723e-08,  2.01647084e-08,  3.11150525e-08,\n",
+       "        4.30839577e-08,  5.61391335e-08,  6.99432921e-08,  8.23357721e-08,\n",
+       "        9.24643241e-08,  9.74592720e-08,  1.04555109e-07,  1.52857165e-07,\n",
+       "        2.26969156e-07,  3.20985689e-07,  4.33406352e-07,  5.60114272e-07,\n",
+       "        7.64157539e-07,  1.13378258e-06,  1.65461192e-06,  2.13167665e-06,\n",
+       "        2.28744288e-06,  1.89762289e-06,  1.10596432e-06,  4.26483247e-07,\n",
+       "        2.90322284e-08, -1.10985065e-07, -1.22231603e-07, -1.12615819e-07,\n",
+       "       -1.15855038e-07, -1.82468930e-07])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# calculate the heating rate for each band and plot them together with the other heating rate\n",
-    "arr1 = np.random.randint(0,100, 46)\n",
-    "arr2 = np.random.randint(0,100, (46,300))\n",
-    "print(arr1.shape, arr2.shape)\n",
-    "arr1 * arr2.T"
+    "heating"
    ]
   },
   {
