Updated RTE notebooks to install pint-xarray

--- a/08.Radiative_Transfer_Equation/Jacobian_Calculator.ipynb
+++ b/08.Radiative_Transfer_Equation/Jacobian_Calculator.ipynb
@@ -2,21 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "676be07e-0b65-4c5f-a176-850b9123d2c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "  current version: 4.12.0\n",
+      "  latest version: 24.3.0\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /Users/wgblumbe/miniconda3/envs/Spring24\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - pint-xarray\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    openssl-3.2.1              |       h0d3ecfb_1         2.7 MB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:         2.7 MB\n",
+      "\n",
+      "The following packages will be UPDATED:\n",
+      "\n",
+      "  openssl                                  3.2.1-h0d3ecfb_0 --> 3.2.1-h0d3ecfb_1\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "openssl-3.2.1        | 2.7 MB    | ##################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
+    "!conda install -c conda-forge -y pint-xarray\n",
     "import os\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
-    "os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
-    "os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
-    "    \n",
+    "\n",
+    "if os.path.isdir('/share/share/ESCI345'):\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/share/share/ESCI345/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/ESCI345/atmospheres/\"\n",
+    "else:\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
+    "\n",
     "import proplot as pplt\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -37,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4747ce1f-607f-49d0-b34b-194d6b1f65dc",
    "metadata": {},
    "outputs": [],
