--- a/08.Radiative_Transfer_Equation/Solve_RTE.ipynb
+++ b/08.Radiative_Transfer_Equation/Solve_RTE.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "!conda install -c conda-forge -y pint-xarray\n",
     "\n",
     "import os\n",
     "import warnings\n",
