Added MCRTM, modified scattering notebooks, and others

--- a/06.Layer_Absorption_and_Transmission/Quantifying_Molecular_Absorption.ipynb
+++ b/06.Layer_Absorption_and_Transmission/Quantifying_Molecular_Absorption.ipynb
@@ -19,9 +19,9 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "if os.path.isdir('/share/share/ESCI345'):\n",
+    "if os.path.isdir('/home/jovyan/esci345/'):\n",
     "    os.environ[\"ARTS_DATA_PATH\"] = \"/share/share/ESCI345/\"\n",
-    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/ESCI345/atmospheres/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/esci345/atmospheres/\"\n",
     "else:\n",
     "    os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
     "    os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
