--- a/08.Radiative_Transfer_Equation/Solve_RTE.ipynb
+++ b/08.Radiative_Transfer_Equation/Solve_RTE.ipynb
@@ -23,9 +23,9 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "if os.path.isdir('/share/share/ESCI345'):\n",
+    "if os.path.isdir('/home/jovyan/esci345/'):\n",
     "    os.environ[\"ARTS_DATA_PATH\"] = \"/share/share/ESCI345/\"\n",
-    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/ESCI345/atmospheres/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/esci345/atmospheres/\"\n",
     "else:\n",
     "    os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
     "    os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
@@ -756,6 +756,7 @@
     "# that file in.\n",
     "#atmosphere = pd.read_csv(os.environ[\"ARTS_XML_ATMO\"] + '/midlatitude-winter.csv')\n",
     "atmosphere['O3'] *= 2 # double the ozone concentration\n",
+    "atmosphere[\"Temperature\"] += 1\n",
     "profiles_exp, optical_depths_exp, freq = optical_depth.atmo_optical_depth(fbounds=freq_bounds, \n",
     "                                                                  atmosphere=atmosphere, \n",
     "                                                                  abs_species=optical_depth.getInfraredAbsorbers(),\n",
@@ -860,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
