--- a/09.Gaseous_Absorption_and_Spectroscopy/HITRAN_Database.ipynb
+++ b/09.Gaseous_Absorption_and_Spectroscopy/HITRAN_Database.ipynb
@@ -13,12 +13,30 @@
    "execution_count": 1,
    "id": "186c844c-72ef-41f2-9257-ca5efe7d00b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyarts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m     os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mARTS_DATA_PATH\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      9\u001b[0m     os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mARTS_XML_ATMO\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyarts\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyarts'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "# Uncomment and adjust the following lines\n",
     "# if ARTS_DATA_PATH is not set as environment variable\n",
-    "os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
+    "if os.path.isdir('/home/jovyan/esci345/'):\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/share/share/ESCI345/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/esci345/atmospheres/\"\n",
+    "else:\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
+    "    \n",
     "import pyarts\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -106,11 +124,11 @@
     "line_location, line_strength = getLines(species, fmin, fmax, fnum)\n",
     "\n",
     "if str(line_location[0].dimensionality) == \"[length]\":\n",
-    "    xlabel = f\"Wavelength [${line_location[0].units}$]\"\n",
+    "    xlabel = f\"Wavelength [${line_location[0].units:~P}$]\"\n",
     "elif str(line_location[0].dimensionality) == \"1 / [time]\":\n",
-    "    xlabel = f\"Frequency [${line_location[0].units}$]\"\n",
+    "    xlabel = f\"Frequency [${line_location[0].units:~}$]\"\n",
     "elif str(line_location[0].dimensionality) == \"1 / [length]\":\n",
-    "    xlabel = f\"Wavenumber [${line_location[0].units}$]\"\n",
+    "    xlabel = f\"Wavenumber [${line_location[0].units:~}$]\"\n",
     "\n",
     "print(\"Spectral units:\", xlabel)"
    ]
@@ -261,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
