--- a/09.Gaseous_Absorption_and_Spectroscopy/Lineshapes.ipynb
+++ b/09.Gaseous_Absorption_and_Spectroscopy/Lineshapes.ipynb
@@ -22,10 +22,14 @@
     "\n",
     "\n",
     "import os\n",
-    "# Uncomment and adjust the following lines\n",
-    "# if ARTS_DATA_PATH is not set as environment variable\n",
-    "os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
     "\n",
+    "if os.path.isdir('/home/jovyan/esci345/'):\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/share/share/ESCI345/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/share/share/esci345/atmospheres/\"\n",
+    "else:\n",
+    "    os.environ[\"ARTS_DATA_PATH\"] = \"/Users/wgblumbe/Code/rttools/arts_catalogs/arts-cat-data-snapshot-arts-2.5.8/\"\n",
+    "    os.environ[\"ARTS_XML_ATMO\"] = \"/Users/wgblumbe/Code/rttools/ESCI345/atmospheres/\"\n",
+    "    \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import typhon as ty\n",
@@ -206,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
